# status-go

./: .codeclimate.yml  .codecov.yml  .deepsource.toml  .dockerignore  .gitignore  .gitmodules  .golangci.yml  .gometalinter.json  .travis.yml  .validate-vendor.sh  BOOTNODE.md  CMakeLists.txt  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile  Gopkg.toml  Jenkins-manual  Jenkinsfile  Jenkinsfile-manual  MAILSERVER.md  Mac  Makefile  PUSH-NOTIFICATIONS-TODO.txt  README.md  RELEASE.md  RELEASING.md  VERSION  WAKU.md  default.nix  deployCollectibles.go  docker-compose.yml  ensNamesToAddresses.go  flake.nix  go.mod  go.sum  library.c  library.go  list-unused-vendor-libraries.sh  nix.conf  package-lock.json  (+6 more)
.dependabot/: config.yml
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  github-bot.yml  package-lock-snitch.config.json  qa-teams.yml
Godeps/: Godeps.json
_assets/: package-lock.json  package.json
_docs/: app-metrics.md  how-to-build.md
_examples/: README.md  waku.json  wakuv2.json  wakuv2_bob.json  whisper.json
abi-spec/: core.go  core_test.go  types.go  types_test.go  utf8.go  utils.go  utils_test.go
account/: accounts.go  accounts_geth.go  accounts_mock.go  accounts_nimbus.go  accounts_test.go  address.go  address_test.go  keystore.go  keystore_geth.go  keystore_nimbus.go  onboarding.go  onboarding_test.go  utils.go  utils_test.go
accountsstore/: database.go  database_test.go
api/: api.go  app_state_test.go  backend.go  backend_subs_test.go  backend_test.go  connection.go  connection_test.go  create_account_and_login_test.go  utils.go  (+12 more)
(+3833 files in other folders)
